--- a/src/product_pages/index.html
+++ b/src/product_pages/index.html
@@ -51,16 +51,16 @@
 
     <main class="divider">
         <section class="product-detail">
-            <h3>Cedar Ridge</h3>
+            <h2>Cedar Ridge</h2>
 
-            <h2 class="divider">Rimrock Tent - 2-Person, 3-Season</h2>
+            <h3 class="divider">Rimrock Tent - 2-Person, 3-Season</h3>
 
-            <!--<img
+            <img
           id="productImage"
           class="divider"
           src="../images/tents/cedar-ridge-rimrock-tent-2-person-3-season-in-rust-clay~p~344yj_01~320.jpg"
           alt="Rimrock Tent - 2-Person, 3-Season"
-        />-->
+        />
             <img id="productImage" class="divider" src="" alt="" />
 
             <p id="productPrice" class="product-card__price">$69.99</p>
