--- a/src/checkout/index.html
+++ b/src/checkout/index.html
@@ -9,11 +9,11 @@
 
   <title>Sleep Outside | Checkout</title>
 
-  <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="../css/style.css" />
 </head>
 
 <body>
-  <header class="divider">
+  <header id="header" class="divider">
     <div class="logo">
       <img src="images/noun_Tent_2517.svg" alt="tent image for logo" />
 
@@ -54,10 +54,52 @@
   <main class="divider">
     <section class="products">
       <h2>Review & Place your Order</h2>
+      <div class="checkout-wrapper">
+        <section class="checkout-items">
+          <h3>Order Summary</h3>
+          <ul class="cart-list">
+            <!-- Cart items will be populated here -->
+          </ul>
+        </section>
+        <section class="checkout-form">
+          <h3>Shipping Information</h3>
+          <form id="checkout-form">
+            <fieldset>
+              <legend>Shipping Address</legend>
+              <label for="fname">First Name:</label>
+              <input type="text" id="fname" name="fname" required>
+
+              <label for="lname">Last Name:</label>
+              <input type="text" id="lname" name="lname" required>
+
+              <label for="street">Street Address:</label>
+              <input type="text" id="street" name="street" required>
+
+              <label for="city">City:</label>
+              <input type="text" id="city" name="city" required>
+
+              <label for="state">State:</label>
+              <input type="text" id="state" name="state" required>
+
+              <label for="zip">ZIP Code:</label>
+              <input type="text" id="zip" name="zip" required>
+
+              <label for="phone">Phone Number:</label>
+              <input type="tel" id="phone" name="phone" required>
+
+              <label for="email">Email:</label>
+              <input type="email" id="email" name="email" required>
+            </fieldset>
+
+            <button type="submit" id="place-order-btn">Place Order</button>
+          </form>
+        </section>
+      </div>
     </section>
   </main>
 
-  <footer>&copy;NOT a real business</footer>
+  <footer id="footer">&copy;NOT a real business</footer>
+  <script type="module" src="../js/checkout.js"></script>
 </body>
 
 </html>
