--- a/src/index.html
+++ b/src/index.html
@@ -52,6 +52,28 @@
       </div>
     </div>
 
+    <section class="categories">
+      <h2>Shop by Category</h2>
+      <div class="category-list">
+        <a href="product_listing/?category=tents" class="category-card">
+          <img src="images/category-tents.svg" alt="Tents" />
+          <h3>Tents</h3>
+        </a>
+        <a href="product_listing/?category=sleeping-bags" class="category-card">
+          <img src="images/category-sleepingbags.svg" alt="Sleeping Bags" />
+          <h3>Sleeping Bags</h3>
+        </a>
+        <a href="product_listing/?category=backpacks" class="category-card">
+          <img src="images/category-backpacks.svg" alt="Backpacks" />
+          <h3>Backpacks</h3>
+        </a>
+        <a href="product_listing/?category=hammocks" class="category-card">
+          <img src="images/category-hammocks.svg" alt="Hammocks" />
+          <h3>Hammocks</h3>
+        </a>
+      </div>
+    </section>
+
     <section class="products">
       <h2>Top Products</h2>
       <ul class="product-list">
