--- a/src/checkout/index.html
+++ b/src/checkout/index.html
@@ -47,6 +47,7 @@
           <!-- <text x="0" y="115" fill="#000000" font-size="5px" font-weight="bold" font-family="'Helvetica Neue', Helvetica, Arial-Unicode, Arial, Sans-serif">Created by Natalia Woodroffe</text>
             <text x="0" y="120" fill="#000000" font-size="5px" font-weight="bold" font-family="'Helvetica Neue', Helvetica, Arial-Unicode, Arial, Sans-serif">from the Noun Project</text> -->
         </svg>
+        <span class="cart-count">0</span>
       </a>
     </div>
   </header>
@@ -60,9 +61,31 @@
           <ul class="cart-list">
             <!-- Cart items will be populated here -->
           </ul>
+
+          <!-- Order Summary Totals -->
+          <div class="summary-section">
+            <h3>Order Summary</h3>
+            <div class="summary-row">
+              <span>Subtotal:</span>
+              <span id="cart-subtotal">$0.00</span>
+            </div>
+            <div class="summary-row">
+              <span>Tax (6%):</span>
+              <span id="cart-tax">$0.00</span>
+            </div>
+            <div class="summary-row">
+              <span>Shipping:</span>
+              <span id="cart-shipping">$0.00</span>
+            </div>
+            <div class="summary-row total">
+              <span>Total:</span>
+              <span id="cart-total">$0.00</span>
+            </div>
+          </div>
         </section>
+
         <section class="checkout-form">
-          <h3>Shipping Information</h3>
+          <h3>Shipping & Payment Information</h3>
           <form id="checkout-form">
             <fieldset>
               <legend>Shipping Address</legend>
@@ -89,6 +112,18 @@
 
               <label for="email">Email:</label>
               <input type="email" id="email" name="email" required>
+            </fieldset>
+
+            <fieldset>
+              <legend>Payment Information</legend>
+              <label for="cardNumber">Credit Card Number:</label>
+              <input type="text" id="cardNumber" name="cardNumber" required value="1234123412341234">
+
+              <label for="expiration">Expiration Date:</label>
+              <input type="text" id="expiration" name="expiration" required value="12/30">
+
+              <label for="code">Security Code:</label>
+              <input type="text" id="code" name="code" required value="123">
             </fieldset>
 
             <button type="submit" id="place-order-btn">Place Order</button>
